--- a/Group Chat App Front End/ChatAppHome/chatAppHome.css
+++ b/Group Chat App Front End/ChatAppHome/chatAppHome.css
@@ -39,3 +39,17 @@ body{
 #createFunctions:hover{
     background-color: rgb(170, 206, 170);
 }
+#logout{
+    margin-left:100%;
+    margin-top:40px ;
+    border-radius: 15px;
+    padding: 8px 6px;
+    background-color:rebeccapurple;
+   
+}
+
+#logout:hover{
+   background-color: rgb(170, 206, 170);
+
+}
+
